summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: illegal start of simple expression
  }  
  ^Moria:6: error: 'while' expected but 'if' found.
  if (estSurBiscuit){
  ^Moria:15: error: '(' expected but '}' found.
}
^