summative.moria.Moria.scala.code
while (!estFaceMur()) {
  retourne()
  do avance() {
    while (!estSurBiscuit || !estFaceMur())
  }  
  if (estSurBiscuit){
    prendBiscuit()
  	retourne()
  	trouveRocher()
  	recule()
  	poseBiscuit()
	} else {
    droite();avance();droite();avance()
  }
}

